event delegate system added

--- a/event_buble.html
+++ b/event_buble.html
@@ -14,7 +14,15 @@
         <li>Architecto, molestias!</li>
         <li>Fuga, nostrum!</li>
     </ul>
-
+    <h3>Clicked Item Delete</h3>
+    <div id="item-container" style="margin-left:100px">
+        <p class="item">Lorem, ipsum dolor.</p>
+        <p class="item">Reprehenderit, delectus iste.</p>
+        <p class="item">In, consectetur fuga.</p>
+        <p class="item">Vel, neque odit.</p>
+        <p class="item">Culpa, itaque ad!</p>
+    </div>
+    <button id="add-button" style="padding: 7px 30px;">Add Item</button>
 
     <!-- script added  -->
     <script src="js/event_buble.js"></script>
