--- a/event_buble.html
+++ b/event_buble.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <ul id="list-container">
-        <li>Lorem, ipsum.</li>
-        <li id="item">Incidunt, velit.</li>
-        <li>Ullam, ipsa.</li>
-        <li>Architecto, molestias!</li>
-        <li>Fuga, nostrum!</li>
+        <li class="item">Lorem, ipsum.</li>
+        <li id="item" class="item">Incidunt, velit.</li>
+        <li class="item">Ullam, ipsa.</li>
+        <li class="item">Architecto, molestias!</li>
+        <li class="item">Fuga, nostrum!</li>
     </ul>
+    <button id="add">add li</button>
     <h3>Clicked Item Delete</h3>
     <div id="item-container" style="margin-left:100px">
         <p class="item">Lorem, ipsum dolor.</p>
